--- a/package.json
+++ b/package.json
@@ -4,16 +4,11 @@
   "private": true,
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --hot",
-    "ui": "start-storybook -p 7775",
     "build": "yarn clean && cross-env NODE_ENV=production webpack",
     "clean": "rimraf build",
-    "format": "prettier --write 'src/**/*.{ts,tsx}'",
     "lint": "yarn lint:js && yarn lint:css",
-    "lint:js": "eslint './src/**/*.{ts,tsx}'",
-    "lint:css": "stylelint './src/**/*.{ts,tsx}'",
     "ts": "tsc --noEmit",
-    "bundle-analyzer": "cross-env NODE_ENV=production BUNDLE_ANALYZER=localhost webpack",
-    "build-storybook": "build-storybook"
+    "bundle-analyzer": "cross-env NODE_ENV=production BUNDLE_ANALYZER=localhost webpack"
   },
   "husky": {
     "hooks": {
@@ -32,14 +27,16 @@
   "dependencies": {
     "@emotion/core": "10.0.27",
     "@emotion/styled": "10.0.27",
+    "add": "^2.0.6",
     "antd": "3.26.8",
     "axios": "0.19.2",
     "classnames": "2.2.6",
     "history": "^4.10.1",
+    "polished": "^3.4.4",
     "react": "16.12.0",
     "react-dom": "16.12.0",
-    "react-hot-loader": "4.12.19",
-    "react-router-dom": "5.1.2"
+    "react-router-dom": "5.1.2",
+    "yarn": "^1.21.1"
   },
   "devDependencies": {
     "@babel/cli": "7.8.4",
@@ -56,14 +53,7 @@
     "@commitlint/cli": "8.3.5",
     "@commitlint/config-conventional": "8.3.4",
     "@hot-loader/react-dom": "16.11.0",
-    "@storybook/addon-actions": "5.3.10",
-    "@storybook/addon-links": "5.3.10",
-    "@storybook/addon-storysource": "5.3.10",
-    "@storybook/addon-viewport": "5.3.10",
-    "@storybook/addons": "5.3.10",
-    "@storybook/react": "5.3.10",
     "@svgr/webpack": "5.1.0",
-    "@types/lodash": "4.14.149",
     "@types/react": "16.9.19",
     "@types/react-dom": "16.9.5",
     "@types/react-router-dom": "5.1.3",
@@ -86,6 +76,7 @@
     "lint-staged": "10.0.7",
     "mini-css-extract-plugin": "0.9.0",
     "prettier": "1.19.1",
+    "react-hot-loader": "4.12.19",
     "rimraf": "3.0.1",
     "source-map-loader": "0.2.4",
     "stylelint": "13.0.0",
