--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "clean": "rimraf build",
     "lint": "yarn lint:js && yarn lint:css",
     "ts": "tsc --noEmit",
-    "bundle-analyzer": "cross-env NODE_ENV=production BUNDLE_ANALYZER=localhost webpack"
+    "bundle-analyzer": "cross-env NODE_ENV=production BUNDLE_ANALYZER=localhost webpack",
+    "ui": "start-storybook -p 7778",
+    "ui:storybook": "build-storybook"
   },
   "husky": {
     "hooks": {
@@ -27,16 +29,14 @@
   "dependencies": {
     "@emotion/core": "10.0.27",
     "@emotion/styled": "10.0.27",
-    "add": "^2.0.6",
     "antd": "3.26.8",
     "axios": "0.19.2",
     "classnames": "2.2.6",
-    "history": "^4.10.1",
-    "polished": "^3.4.4",
+    "history": "4.10.1",
+    "polished": "3.4.4",
     "react": "16.12.0",
     "react-dom": "16.12.0",
-    "react-router-dom": "5.1.2",
-    "yarn": "^1.21.1"
+    "react-router-dom": "5.1.2"
   },
   "devDependencies": {
     "@babel/cli": "7.8.4",
@@ -53,6 +53,10 @@
     "@commitlint/cli": "8.3.5",
     "@commitlint/config-conventional": "8.3.4",
     "@hot-loader/react-dom": "16.11.0",
+    "@storybook/addon-actions": "5.3.10",
+    "@storybook/addon-links": "5.3.10",
+    "@storybook/addons": "5.3.10",
+    "@storybook/react": "5.3.10",
     "@svgr/webpack": "5.1.0",
     "@types/react": "16.9.19",
     "@types/react-dom": "16.9.5",
