--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "antd": "3.26.8",
     "axios": "0.19.2",
     "classnames": "2.2.6",
+    "date-fns": "2.9.0",
     "history": "4.10.1",
     "polished": "3.4.4",
     "react": "16.12.0",
