--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "polished": "3.4.4",
     "react": "16.12.0",
     "react-dom": "16.12.0",
+    "react-portal": "4.2.1",
     "react-router-dom": "5.1.2"
   },
   "devDependencies": {
