feat: voice message part 1

--- a/.eslintrc
+++ b/.eslintrc
@@ -47,6 +47,7 @@
     "react/prop-types": 0,
     "react/sort-comp": 0,
     "react/static-property-placement": 0,
-    "react/state-in-constructor": 0
+    "react/state-in-constructor": 0,
+    "jsx-a11y/media-has-caption": 0
   }
 }
