--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,8 @@
     "build": "yarn clean && cross-env NODE_ENV=production webpack",
     "clean": "rimraf build",
     "lint": "yarn lint:js && yarn lint:css",
+    "lint:js": "eslint './src/**/*.{ts,tsx}'",
+    "lint:css": "stylelint './src/**/*.{ts,tsx}'",
     "ts": "tsc --noEmit",
     "bundle-analyzer": "cross-env NODE_ENV=production BUNDLE_ANALYZER=localhost webpack",
     "ui": "start-storybook -p 7778",
