--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,14 +24,13 @@
     "*.{ts,tsx}": [
       "eslint",
       "stylelint",
-      "prettier --write",
-      "git add"
+      "prettier --write"
     ]
   },
   "dependencies": {
     "@emotion/core": "10.0.27",
     "@emotion/styled": "10.0.27",
-    "antd": "3.26.8",
+    "antd": "3.26.12",
     "axios": "0.19.2",
     "classnames": "2.2.6",
     "date-fns": "2.9.0",
@@ -57,15 +56,15 @@
     "@commitlint/cli": "8.3.5",
     "@commitlint/config-conventional": "8.3.4",
     "@hot-loader/react-dom": "16.11.0",
-    "@storybook/addon-actions": "5.3.10",
-    "@storybook/addon-links": "5.3.10",
-    "@storybook/addons": "5.3.10",
-    "@storybook/react": "5.3.10",
-    "@svgr/webpack": "5.1.0",
-    "@types/react": "16.9.19",
+    "@storybook/addon-actions": "5.3.13",
+    "@storybook/addon-links": "5.3.13",
+    "@storybook/addons": "5.3.13",
+    "@storybook/react": "5.3.13",
+    "@svgr/webpack": "5.2.0",
+    "@types/react": "16.9.22",
     "@types/react-dom": "16.9.5",
     "@types/react-router-dom": "5.1.3",
-    "@typescript-eslint/parser": "2.18.0",
+    "@typescript-eslint/parser": "2.20.0",
     "babel-loader": "8.0.6",
     "babel-plugin-emotion": "10.0.27",
     "cross-env": "7.0.0",
@@ -76,25 +75,25 @@
     "eslint-plugin-import": "2.20.1",
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-react": "7.18.3",
-    "eslint-plugin-react-hooks": "2.3.0",
+    "eslint-plugin-react-hooks": "2.4.0",
     "eslint-plugin-typescript": "0.14.0",
-    "file-loader": "5.0.2",
+    "file-loader": "5.1.0",
     "html-webpack-plugin": "3.2.0",
-    "husky": "4.2.1",
+    "husky": "4.2.3",
     "lint-staged": "10.0.7",
     "mini-css-extract-plugin": "0.9.0",
     "prettier": "1.19.1",
     "react-hot-loader": "4.12.19",
-    "rimraf": "3.0.1",
+    "rimraf": "3.0.2",
     "source-map-loader": "0.2.4",
-    "stylelint": "13.0.0",
+    "stylelint": "13.2.0",
     "stylelint-config-prettier": "8.0.1",
-    "stylelint-config-standard": "19.0.0",
+    "stylelint-config-standard": "20.0.0",
     "stylelint-order": "4.0.0",
-    "typescript": "3.7.5",
-    "webpack": "4.41.5",
+    "typescript": "3.8.2",
+    "webpack": "4.41.6",
     "webpack-bundle-analyzer": "3.6.0",
-    "webpack-cli": "3.3.10",
-    "webpack-dev-server": "3.10.2"
+    "webpack-cli": "3.3.11",
+    "webpack-dev-server": "3.10.3"
   }
 }
