--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,12 +31,13 @@
     "@emotion/core": "10.0.28",
     "@emotion/styled": "10.0.27",
     "axios": "0.19.2",
-    "classnames": "2.2.6",
     "date-fns": "2.12.0",
+    "final-form": "4.19.1",
     "history": "4.10.1",
     "polished": "3.5.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-final-form": "6.4.0",
     "react-portal": "4.2.1",
     "react-router-dom": "5.1.2"
   },
